Update overall layout

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="header-lower">
         <div class="header-lower-left">
           <img src="" alt="profile-pic-large"></img>
-          <p>Hi, there!</p>
+          <p class="hi-there">Hi, there!</p>
           <p>User Name (@username)</p>
         </div>
         <div class="header-lower-right">
@@ -77,75 +77,101 @@
     <div class="main-content">
       <div class="projects">
         <p>Your Projects</p>
-        <div class="card">
-          <p class="title">Article Title</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
-          <img src="" alt="action-icon"></img>
-          <img src="" alt="action-icon"></img>
-          <img src="" alt="action-icon"></img>
-        </div>
-        <div class="card">
-          <p class="title">Article Title</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
-          <img src="" alt="action-icon"></img>
-          <img src="" alt="action-icon"></img>
-          <img src="" alt="action-icon"></img>
-        </div>
-        <div class="card">
-          <p class="title">Article Title</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
-          <img src="" alt="action-icon"></img>
-          <img src="" alt="action-icon"></img>
-          <img src="" alt="action-icon"></img>
-        </div>
-        <div class="card">
-          <p class="title">Article Title</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
-          <img src="" alt="action-icon"></img>
-          <img src="" alt="action-icon"></img>
-          <img src="" alt="action-icon"></img>
-        </div>
-        <div class="card">
-          <p class="title">Article Title</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
-          <img src="" alt="action-icon"></img>
-          <img src="" alt="action-icon"></img>
-          <img src="" alt="action-icon"></img>
-        </div>
-        <div class="card">
-          <p class="title">Article Title</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
-          <img src="" alt="action-icon"></img>
-          <img src="" alt="action-icon"></img>
-          <img src="" alt="action-icon"></img>
+        <div class="card-container">
+          <div class="card">
+            <p class="title">Article Title</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+            <div class="card-icon">
+              <img src="" alt="action-icon"></img>
+              <img src="" alt="action-icon"></img>
+              <img src="" alt="action-icon"></img>
+            </div>
+          </div>
+          <div class="card">
+            <p class="title">Article Title</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+            <div class="card-icon">
+              <img src="" alt="action-icon"></img>
+              <img src="" alt="action-icon"></img>
+              <img src="" alt="action-icon"></img>
+            </div>
+          </div>
+          <div class="card">
+            <p class="title">Article Title</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+            <div class="card-icon">
+              <img src="" alt="action-icon"></img>
+              <img src="" alt="action-icon"></img>
+              <img src="" alt="action-icon"></img>
+            </div>
+          </div>
+          <div class="card">
+            <p class="title">Article Title</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+            <div class="card-icon">
+              <img src="" alt="action-icon"></img>
+              <img src="" alt="action-icon"></img>
+              <img src="" alt="action-icon"></img>
+            </div>
+          </div>
+          <div class="card">
+            <p class="title">Article Title</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+            <div class="card-icon">
+              <img src="" alt="action-icon"></img>
+              <img src="" alt="action-icon"></img>
+              <img src="" alt="action-icon"></img>
+            </div>
+          </div>
+          <div class="card">
+            <p class="title">Article Title</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+            <div class="card-icon">
+              <img src="" alt="action-icon"></img>
+              <img src="" alt="action-icon"></img>
+              <img src="" alt="action-icon"></img>
+            </div>
+          </div>
         </div>
       </div>
 
       <div class="annoucements">
-        <div class="card">
-          <p class="title">Aannoucement Title</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
-        </div>
-        <div class="card">
-          <p class="title">Aannoucement Title</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
-        </div>
-        <div class="card">
-          <p class="title">AannoucementTitle</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+        <p>Annoucements</p>
+        <div class="annoucements-container">
+          <div class="card">
+            <p class="title">Annoucement Title</p>
+            <p class="bottom-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+          </div>
+          <div class="card">
+            <p class="title">Annoucement Title</p>
+            <p class="bottom-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+          </div>
+          <div class="card">
+            <p class="title">AnnoucementTitle</p>
+            <p class="bottom-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+          </div>
         </div>
       </div>
 
       <div class="trending">
-        <img src="" alt="action-icon"></img>
-        <img src="" alt="action-icon"></img>
-        <img src="" alt="action-icon"></img>
-        <p>@username</p>
-        <p>User Name</p>
-        <p>@username</p>
-        <p>User Name</p>
-        <p>@username</p>
-        <p>User Name</p>
+        <p>Trending</p>
+        <div class="trending-container">
+          <div class="card">
+            <img src="" alt="action-icon"></img>
+            <p>@username</p>
+            <p>User Name</p>
+          </div>
+          <div class="card">
+            <img src="" alt="action-icon"></img>
+            <p>@username</p>
+            <p>User Name</p>
+          </div>
+          <div class="card">
+            <img src="" alt="action-icon"></img>
+            <p class="name-tag">@username</p>
+            <p class="username">User Name</p>
+          </div>
+        </div>
       </div>
        
     </div>
