Update layout styling

--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
           </div>
           <div class="card">
             <img src="" alt="action-icon"></img>
-            <p class="name-tag">@username</p>
-            <p class="username">User Name</p>
+            <p>@username</p>
+            <p>User Name</p>
           </div>
         </div>
       </div>
